--- a/chatbotAPP/android/chatbot/app/build.gradle
+++ b/chatbotAPP/android/chatbot/app/build.gradle
@@ -24,6 +24,9 @@ android {
 }
 
 dependencies {
+    implementation('io.socket:socket.io-client:1.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
